# react-native-nghe-ro-library-abstract

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-nghe-ro-library.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml  AndroidManifestNew.xml
android/src/main/java/com/ngherolibrary/: CallbackInterface.java  NgheRoLibraryModule.java  NgheRoLibraryPackage.java
android/src/main/java/com/rmsl/juce/: Java.java
android/src/newarch/: NgheRoLibrarySpec.java
android/src/oldarch/: NgheRoLibrarySpec.java
example/: app.json  package.json
example/android/: build.gradle  gradle.properties  local.properties  settings.gradle
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/res/values/: themes.xml
example/android/app/src/main/res/values-night/: themes.xml
example/ios/: File.swift  Podfile
example/src/: App.tsx
ios/: NgheRoLibrary.h  NgheRoLibrary.mm
src/: NativeNgheRoLibrary.ts  index.tsx  types.ts
